# rusty-snake

./: Cargo.toml  README.md
src/: main.rs
