[package]

name = "rusty-snake"
version = "0.1.0"
authors = [
    "Eija Johansson <eija.johansson@gmail.com>",
    "Tobias Johansson <tobias.j.e.johansson@gmail.com>"
]

[[bin]]
name = "rusty-snake"

[dependencies]
piston = "0.16.0"
piston2d-graphics = "0.11.0"
pistoncore-glutin_window = "0.19.0"
piston2d-opengl_graphics = "0.20.0"
